# indexcast

./: .gitignore  LICENSE  README.md  alembic.ini  cemetery.md  example_configuration.sh  main.py  pyproject.toml
.github/workflows/: ci.yaml
migrations/: README.md  env.py
migrations/versions/: 003e65779605_fresh_migration.py  026f44b3d2d5_create_initial_tables.py  0deb26a1d07e_added_text_rep_col_to_markets.py  136abe5cb312_marketupdate.py  151800aa33ee_make_label_id_part_of_composite_key_for_.py  20614985e7f2_added_weight_scores_and_chain_of_.py  2e1b70af07e3_populate_types.py  30173029264d_added_update_col_for_5_market_data_.py  307761332748_fix_rule_market_relationship.py  343f04868023_typo.py  392053e5f354_add_upper_and_lower_bounds_to_index.py  3a7de0d36b89_clean_migration.py  45360a7086da_add_batch_number_to_rules_table.py  56d4b33aaded_making_indexquestion_table_and_links_.py  5c4f41527867_populate_types.py  627ba48b0518_add_id_to_the_relevance_scores.py  69eea606f70b_fix_close_time_nullable.py  71f4f82e4d42_removing_prompts_table.py  77cdcd2f43d1_adding_scores_to_relevance_scores.py  7dfd67c4a227_update_timestamp_variable_names.py  8126d72a879c_added_index_question_table_and_made_.py  (+23 more)
ml/: bounds.py  classification.py  clients.py  dspy_market_scorer.py  formula.py  lm_initial_labeler.py  meta_prompting.py  ranker.py  rules.py
models/: __init__.py  markets.py
notebooks/: MLP_for_rule_eligibility.ipynb  README.md  dspy.ipynb  market_classification_summary.ipynb  second_classifier.ipynb
pipelines/: definitions.py
tests/: test_bounds.py
(+24 files in other folders)
