[project]
name = "indexcast-backend"
version = "0.1.0"
description = "IndexCast: Combine prediction market data into indices."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "dagster>=1.10.20",
    "dagster-webserver>=1.10.20",
    "dspy>=3.0.4",
    "filelock>=3.18.0",
    "instructor==1.11.3",
    "openai>=1.86.0",
    "pandas>=2.3.1",
    "pydantic>=2.12.3",
    "requests>=2.32.4",
    "ruff>=0.11.13",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=4.1.0",
    "sqlmodel>=0.0.24",
    "urllib3>=2.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
]

[tool.black]
line-length = 100
include = '\.pyi?$'

[tool.ruff]
# Enable rules
lint.select = ["E", "F", "B", "I", "N", "UP", "D", "T20", "S"]
# Ignore specific rules
lint.ignore = ["D203", "D212", "B008"]
# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
line-length = 100

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.per-file-ignores]
"migrations/versions/**/*" = ["ALL"]
"notebooks/**/*" = ["ALL"]
"tests/**/*" = ["S101", "D"]


[tool.pytest.ini_options]
pythonpath = ["."]

[tool.dagster]
module_name = "pipelines.definitions"
